fix: color of list item for better visibility

--- a/helloworld/src/ToDoList.css
+++ b/helloworld/src/ToDoList.css
@@ -25,7 +25,7 @@
   }
   .todoListMain .theList li {
     color: #333;
-    background-color: rgba(255,255,255,.5);
+    background-color: rgba(132, 229, 253, 0.5);
     padding: 15px;
     margin-bottom: 15px;
     border-radius: 5px;
